Fixed preliminary stuff, Needs to copy api folder content to dist

--- a/app/views/testquery.html
+++ b/app/views/testquery.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>IBM DB2</h1>
   <p class="lead">
-    <img src="images/oceanex-logo.png" alt="Oceanex"><br>
+    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     tests
   </p>
   <p><a class="btn btn-lg btn-success"  ng-click="testquery()">Test db2_connect Query &nbsp;<span class="glyphicon glyphicon-ok"></span></a></p>
