--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -1,11 +1,5 @@
   <ul class="nav nav-pills pull-right" ng-controller="navCtrl">
-    <!--<li ng-Class="{active: isActive('/JSON')}"><a ng-href="./#/JSON">JSON</a></li>-->
-    <li ng-Class="{active: isActive('/testconnection')}"><a ng-href="./#/testconnection">Connection</a></li>
-    <!-- <li ng-Class="{active: isActive('/testservice')}"><a ng-href="./#/testservice">Web Service</a></li> -->
-    <li ng-Class="{active: isActive('/testquery')}"><a ng-href="./#/testquery">Pconnect</a></li>
-    <li ng-Class="{active: isActive('/testpdo')}"><a ng-href="./#/testpdo">PDO</a></li>
-    <li ng-Class="{active: isActive('/testconn')}"><a ng-href="./#/testconn">Test Connect</a></li>
-    <li ng-Class="{active: isActive('/testpconn')}"><a ng-href="./#/testpconn">Test Pconnect</a></li>
-    <li ng-Class="{active: isActive('/sp0120')}"><a ng-href="./#/sp0120">SP0120</a></li>
+    <li ng-Class="{active: isActive('/')}"><a ng-href="./#/Main">Home</a></li>
+    <li ng-Class="{active: isActive('/testquery')}"><a ng-href="./#/testquery">JSON</a></li>
   </ul>
-  <h3 class="text-muted">phpzend</h3>
+  <h3 class="text-muted">Webapp</h3>
