--- a/app/views/testquery.html
+++ b/app/views/testquery.html
@@ -1,10 +1,10 @@
 <div class="jumbotron">
-  <h1>IBM DB2</h1>
+  <h1>Webapp</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     tests
   </p>
-  <p><a class="btn btn-lg btn-success"  ng-click="testquery()">Test db2_connect Query &nbsp;<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success"  ng-click="testquery()">Test Query &nbsp;<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="panel panel-success " ng-show="toggleconnect">
